--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - TennisScoreBoardH</name>
   <url>http://maven.apache.org</url>
-
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
@@ -75,7 +75,12 @@
       <version>2.0.0</version>
     </dependency>
 
-
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-hikaricp -->
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-hikaricp</artifactId>
+      <version>7.1.0.Final</version>
+    </dependency>
   </dependencies>
 
 
