--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,26 @@
       <artifactId>hibernate-hikaricp</artifactId>
       <version>7.1.0.Final</version>
     </dependency>
+
+    <!-- Зависимость MapStruct -->
+    <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>1.6.3</version>
+    </dependency>
+
+    <!-- Процессор аннотаций (для генерации кода на этапе компиляции) -->
+    <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>1.6.3</version>
+    </dependency>
+
   </dependencies>
+
+
 
 
   <build>
@@ -99,6 +118,12 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>1.18.38</version>
+            </path>
+
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>1.5.5.Final</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
